force-app/main/default/objects/QTC_Mig_OrderProducts__c/QTC_Mig_OrderProducts__c.object-meta.xml
<CustomObject>
    <label>QTC_Mig_OrderProducts</label>
    <nameField>
        <label>QTC_Mig_OrderProducts</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QTC_Mig_OrderProducts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>