force-app/main/default/objects/QTC_Mig_OrderProducts__c/fields/Amount_Credit__c.field-meta.xml
<CustomField>
    <fullName>Amount_Credit__c</fullName>
    <label>Amount (Credit)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>