force-app/main/default/objects/QTC_Mig_OrderProducts__c/fields/Amount_Foreign_Currency_without_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Amount_Foreign_Currency_without_Symbol__c</fullName>
    <label>Amount Foreign Currency without Symbol</label>
    <length>255</length>
    <type>Text</type>
</CustomField>