force-app/main/default/objects/QTC_Mig_OrderProducts__c/fields/Applying_Link_Type__c.field-meta.xml
<CustomField>
    <fullName>Applying_Link_Type__c</fullName>
    <label>Applying Link Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>