force-app/main/default/objects/QTC_Mig_OrderProducts__c/fields/Contract_Item_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Item_Start_Date__c</fullName>
    <label>Contract Item Start Date</label>
    <type>Date</type>
</CustomField>