force-app/main/default/objects/QTC_Mig_OrderProducts__c/fields/Invoice_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_End_Date__c</fullName>
    <label>Invoice End Date</label>
    <type>Date</type>
</CustomField>