force-app/main/default/objects/QTC_Mig_OrderProducts__c/fields/Invoice_Line_ID__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Line_ID__c</fullName>
    <label>Invoice Line ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>