force-app/main/default/objects/QTC_Mig_OrderProducts__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <label>Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>