force-app/main/default/objects/QTC_Mig_OrderProducts__c/fields/Item_Rate__c.field-meta.xml
<CustomField>
    <fullName>Item_Rate__c</fullName>
    <label>Item Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>