force-app/main/default/objects/QTC_Mig_OrderProducts__c/fields/OL_Paid_In_Full__c.field-meta.xml
<CustomField>
    <fullName>OL_Paid_In_Full__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OL Paid In Full</label>
    <type>Checkbox</type>
</CustomField>