force-app/main/default/objects/QTC_Mig_OrderProducts__c/fields/Record_Status__c.field-meta.xml
<CustomField>
    <fullName>Record_Status__c</fullName>
    <label>Record Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>