force-app/main/default/objects/QTC_Mig_OrderProducts__c/fields/T_Amount_Without_Symbol__c.field-meta.xml
<CustomField>
    <fullName>T_Amount_Without_Symbol__c</fullName>
    <label>T_Amount_Without_Symbol</label>
    <length>200</length>
    <type>Text</type>
</CustomField>