force-app/main/default/objects/QTC_Mig_OrderProducts__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Internal_ID__c</columns>
    <columns>Document_Number__c</columns>
    <columns>Line_ID__c</columns>
    <columns>Line_Sequence_Number__c</columns>
    <columns>Item__c</columns>
    <columns>Quantity__c</columns>
    <columns>of_Months__c</columns>
    <columns>Price_Level__c</columns>
    <columns>Item_Rate__c</columns>
    <columns>Rate_Foreign_Currency_without_Symbol__c</columns>
    <columns>Amount_Foreign_Currency_without_Symbol__c</columns>
    <columns>Tax__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Internal_ID__c</field>
        <operation>equals</operation>
        <value>2348220</value>
    </filters>
    <label>All Records</label>
</ListView>